Se creo la carpeta ejemplo 2 y se hizo un proyecto para sacar costos por metro cuadrado

--- a/Ejemplo2/index.html
+++ b/Ejemplo2/index.html
@@ -5,27 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>La brocha gorda</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
-
     <div class="container">
         <div class="jumbotron">
-
-            <div class="row">
+            <div class="row text-center">
                 <div class="col-12">
-                    <div>LA BROCHA GORDA</div>
+                    La Brocha Gorda
                 </div>
             </div>
-
 
             <div class="row">
                 <div class="col-12">
                     <div class="form-group">
-                        <label for="">Ingresa Numero 1:</label>
-                        <input type="text" name="" id="Numero1" class="form-control" placeholder="Ingresa un numero positivo" aria-describedby="helpId">
+                        <label for="">Ingresa superficie:</label>
+                        <input type="text" name="" id="superficie" class="form-control" placeholder="Ingresa un numero positivo" aria-describedby="helpId">
                     </div>
                 </div>
             </div>
@@ -33,15 +30,15 @@
             <div class="row">
                 <div class="col-12">
                     <div class="form-group">
-                        <label for="">Ingresa numero 2:</label>
-                        <input type="number" name="" id="Numero2" class="form-control" placeholder="Ingresa un numero positivo" aria-describedby="helpId">
+                        <label for="">Ingresa precio:</label>
+                        <input type="number" name="" id="precio" class="form-control" placeholder="Ingresa un numero positivo" aria-describedby="helpId">
                     </div>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-12">
-                    <button id="btnCalcular" class="btn btn-outline-success btn-block">Calcular suma</button>
+                    <button id="btnCalcular" class="btn btn-outline-success btn-block">Calcular costo</button>
                 </div>
             </div>
 
@@ -53,8 +50,16 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
+
+
+
+
+
+
+
 
 
 
@@ -74,6 +79,7 @@
 
     <!-- scripts -->
     <script src="./app.js"></script>
+
 </body>
 
 </html>
