Se agregaron las funciones al JS para poder calcular la distancia recorrida de un automovil

--- a/Practicas_Estructura_Secuenciales/Ejemplo6/index.html
+++ b/Practicas_Estructura_Secuenciales/Ejemplo6/index.html
@@ -18,16 +18,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="form-group">
-                        <label for="">Distancia</label>
-                        <input type="text" name="" id="distancia" class="form-control" placeholder="" aria-describedby="helpId">
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-12">
-                    <div class="form-group">
-                        <label for="">Velocidad</label>
+                        <label for="">Ingrese Velocidad:</label>
                         <input type="text" name="" id="velocidad" class="form-control" placeholder="" aria-describedby="helpId">
                     </div>
                 </div>
@@ -36,7 +27,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="form-group">
-                        <label for="">Tiempo</label>
+                        <label for="">Ingrese Tiempo:</label>
                         <input type="text" name="" id="tiempo" class="form-control" placeholder="" aria-describedby="helpId">
                     </div>
                 </div>
