--- a/CondicionalesSimples/Ejemplo2/index.html
+++ b/CondicionalesSimples/Ejemplo2/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 
 <head>
-    <title>Area Triangulos</title>
+    <title>Title</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -14,56 +13,42 @@
 <body>
     <div class="container">
         <div class="jumbotron">
-            <h1>Area Cualquier Triangulo</h1>
 
             <div class="row">
-                <div class="col-12">
+                <div class="col-6">
                     <div class="form-group">
-                        <label for="">Lado A</label>
-                        <input id="ladoA" class="form-control" type="text">
+                        <label for="">Numero Uno:</label>
+                        <input type="text" id="num1" class="form-control" placeholder="" aria-describedby="helpId">
+                    </div>
+                </div>
+
+                <div class="col-6">
+                    <div class="form-group">
+                        <label for="">Numero Dos:</label>
+                        <input type="text" id="num2" class="form-control" placeholder="" aria-describedby="helpId">
                     </div>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-12">
-                    <div class="form-group">
-                        <label for="">Lado B</label>
-                        <input id="ladoB" class="form-control" type="text">
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-12">
-                    <div class="form-group">
-                        <label for="">Lado C</label>
-                        <input id="ladoC" class="form-control" type="text">
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-12">
-                    <button type="button" name="" id="btnCalcular" class="btn btn-primary btn-lg btn-block">Calcular</button>
+                    <button type="button" name="" id="btnNumMayor" class="btn btn-primary btn-lg btn-block">Comparar Numeros</button>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-12">
                     <div class="alert alert-success" role="alert">
-                        <h4 class="alert-heading">El area es:
-                            <span id="resultado"></span>
+                        <h4 class="alert-heading">El numero Mayor es:
+                            <span id="NumeroMayor"></span>
                         </h4>
                     </div>
                 </div>
             </div>
 
+
         </div>
     </div>
-
-
-
 
 
 
