--- a/Practicas_Estructura_Secuenciales/Ejemplo11/index.html
+++ b/Practicas_Estructura_Secuenciales/Ejemplo11/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Area Triangulos</title>
+    <title>Metros a Pulgadas</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,47 +12,30 @@
 </head>
 
 <body>
+
     <div class="container">
         <div class="jumbotron">
-            <h1>Area Cualquier Triangulo</h1>
+            <h1>Metros a Pulgadas</h1>
 
             <div class="row">
                 <div class="col-12">
                     <div class="form-group">
-                        <label for="">Lado A</label>
-                        <input id="ladoA" class="form-control" type="text">
+                        <label for="">Metros:</label>
+                        <input id="metros" class="form-control" type="text">
                     </div>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-12">
-                    <div class="form-group">
-                        <label for="">Lado B</label>
-                        <input id="ladoB" class="form-control" type="text">
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-12">
-                    <div class="form-group">
-                        <label for="">Lado C</label>
-                        <input id="ladoC" class="form-control" type="text">
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-12">
-                    <button type="button" name="" id="btnCalcular" class="btn btn-primary btn-lg btn-block">Calcular</button>
+                    <button type="button" id="btnCalcular" class="btn btn-primary btn-lg btn-block">Convertir a Pulgadas</button>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-12">
                     <div class="alert alert-success" role="alert">
-                        <h4 class="alert-heading">El area es:
+                        <h4 class="alert-heading">Las pulgadas son:
                             <span id="resultado"></span>
                         </h4>
                     </div>
@@ -61,7 +44,6 @@
 
         </div>
     </div>
-
 
 
 
