--- a/Practicas_Estructura_Secuenciales/Ejemplo13/index.html
+++ b/Practicas_Estructura_Secuenciales/Ejemplo13/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Area Triangulos</title>
+    <title>Viaticos</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,13 +14,13 @@
 <body>
     <div class="container">
         <div class="jumbotron">
-            <h1>Area Cualquier Triangulo</h1>
+            <h1>Viaticos</h1>
 
             <div class="row">
                 <div class="col-12">
                     <div class="form-group">
-                        <label for="">Lado A</label>
-                        <input id="ladoA" class="form-control" type="text">
+                        <label for="">Cantidad de dias:</label>
+                        <input id="dias" class="form-control" type="text" name="">
                     </div>
                 </div>
             </div>
@@ -28,8 +28,8 @@
             <div class="row">
                 <div class="col-12">
                     <div class="form-group">
-                        <label for="">Lado B</label>
-                        <input id="ladoB" class="form-control" type="text">
+                        <label for="">Noches en el hotel:</label>
+                        <input id="hotel" class="form-control" type="text" name="">
                     </div>
                 </div>
             </div>
@@ -37,8 +37,8 @@
             <div class="row">
                 <div class="col-12">
                     <div class="form-group">
-                        <label for="">Lado C</label>
-                        <input id="ladoC" class="form-control" type="text">
+                        <label for="">Costo de comida por dias:</label>
+                        <input id="comida" class="form-control" type="text" name="">
                     </div>
                 </div>
             </div>
@@ -52,7 +52,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="alert alert-success" role="alert">
-                        <h4 class="alert-heading">El area es:
+                        <h4 class="alert-heading">El monto es:
                             <span id="resultado"></span>
                         </h4>
                     </div>
@@ -61,21 +61,6 @@
 
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     <!-- Optional JavaScript -->
