--- a/Practicas_Estructura_Secuenciales/Ejemplo9/index.html
+++ b/Practicas_Estructura_Secuenciales/Ejemplo9/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Area Triangulos</title>
+    <title>Distancia entre dos puntos</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,56 +12,54 @@
 </head>
 
 <body>
+
     <div class="container">
         <div class="jumbotron">
-            <h1>Area Cualquier Triangulo</h1>
+            <h1>Plano Carteciano</h1>
 
             <div class="row">
-                <div class="col-12">
+                <div class="col-6">
                     <div class="form-group">
-                        <label for="">Lado A</label>
-                        <input id="ladoA" class="form-control" type="text">
+                        <label for="">X1:</label>
+                        <input id="punto1" class="form-control" type="text" name="">
+                    </div>
+                    <div class="form-group">
+                        <label for="">Y1:</label>
+                        <input id="punto2" class="form-control" type="text" name="">
                     </div>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-12">
+                <div class="col-6">
                     <div class="form-group">
-                        <label for="">Lado B</label>
-                        <input id="ladoB" class="form-control" type="text">
+                        <label for="">X2:</label>
+                        <input id="punto3" class="form-control" type="text" name="">
+                    </div>
+                    <div class="form-group">
+                        <label for="">Y2:</label>
+                        <input id="punto4" class="form-control" type="text" name="">
                     </div>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-12">
-                    <div class="form-group">
-                        <label for="">Lado C</label>
-                        <input id="ladoC" class="form-control" type="text">
-                    </div>
+                <div class="col-4">
+                    <button type="button" name="" id="btnCalcular" class="btn btn-outline-primary btn-lg btn-block">Calcular Distancia</button>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-12">
-                    <button type="button" name="" id="btnCalcular" class="btn btn-primary btn-lg btn-block">Calcular</button>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-12">
-                    <div class="alert alert-success" role="alert">
-                        <h4 class="alert-heading">El area es:
+                <div class="col-4">
+                    <div class="alert alert-success text-center" role="alert">
+                        <h4 class="alert-heading">La distancia es:
                             <span id="resultado"></span>
                         </h4>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
-
 
 
 
