Ejercicio 1 terminado Se creo un programa donde al ingresar cualquier cantidad de numeros no marcara cuales son mayor, menor, o igual a 0

--- a/EstructurasCiclicas/Ejercicio1/index.html
+++ b/EstructurasCiclicas/Ejercicio1/index.html
@@ -17,12 +17,18 @@
         <div class="jumbotron">
             <div class="row">
                 <div class="col-12">
-                    <div id="AgregarNumeros"></div>
+                    <div id="cajaNumeros"></div>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 ">
+                    <button type="button" id="btnAgregarNumero" class="btn btn-outline-dark btn-lg btn-block">Agregar Número</button>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12 mt-4">
                     <button type="button" name="" id="btnComparar" class="btn btn-outline-info btn-lg btn-block">Comparar</button>
                 </div>
             </div>
