Se edito el html y js

--- a/Arrays/Ejercicio1/index.html
+++ b/Arrays/Ejercicio1/index.html
@@ -15,29 +15,34 @@
 
     <div class="container">
         <div class="jumbotron">
-            <h1>Operaciones</h1>
+
+            <h1 class="text-center">Operaciones</h1>
 
             <div class="row">
-                <div class="col-4">
-                    <div class="form-group">
-                        <label for="">Operacion 1=Suma, 2=Resta, 3=Multiplicaion</label>
-                        <input type="number" name="" id="tipoOperacion" class="form-control" placeholder="" aria-describedby="helpId">
-                    </div>
+                <div class="col mt-4">
+                    <select name="" id="operaciones">
+                        <option>Operaciones</option>
+                        <option value="A">Suma</option>
+                        <option value="B">Resta</option>
+                        <option value="C">Multiplicacion</option>
+                    </select>
                 </div>
-                <div class="col-4">
+            </div>
+
+            <div class="row">
+                <div class="col-6 mt-4">
                     <div class="form-group">
                         <label for="">Numero A</label>
                         <input type="number" name="" id="numA" class="form-control" placeholder="" aria-describedby="helpId">
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-6 mt-4">
                     <div class="form-group">
                         <label for="">Numero B</label>
                         <input type="number" name="" id="numB" class="form-control" placeholder="" aria-describedby="helpId">
                     </div>
                 </div>
             </div>
-
 
             <div class="row">
                 <div class="col-12">
